fixing CheckStyle errors and formatting code