@@ -2,36 +2,56 @@ package it.unibo.goosegame.application.impl;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Objects;
 
 import javax.swing.JOptionPane;
 
+import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 import it.unibo.goosegame.application.GameMenu;
 import it.unibo.goosegame.application.api.MenuLogic;
-
+/**
+ * The MenuLogicImpl class implements the logic behind the game menu, 
+ * handling the player management (adding players, checking the maximum number of players).
+ */
 public class MenuLogicImpl implements MenuLogic {
 
+    private static final int MAX_PLAYERS = 6;
+    /**
+     * Reference to the GameMenu view.
+     * This is assumed to be owned by this class and not modified externally after being passed in the constructor.
+    */
     private final GameMenu view;
     private final List<String> players;
-    int playerCount = 0;
+    private int playerCount;
 
-    public MenuLogicImpl(GameMenu view) {
+    /**
+     * @param view the GameMenu UI associted with this logic
+     */
+    @SuppressFBWarnings("EI2")
+    public MenuLogicImpl(final GameMenu view) {
         this.players = new ArrayList<>();
-        this.view = view;
+        this.view = Objects.requireNonNull(view);
     }
 
+    /**
+    * {@inheritDoc}
+    */
     @Override
     public void startGame() {
         //funzione
     }
 
+    /**
+    * {@inheritDoc}
+    */
     @Override
     public void addPlayer() {
-        String playerName = view.getPlayerName();
-        if(!playerName.trim().isEmpty()) {
-            if(players.size() == 6) {
-               JOptionPane . showMessageDialog ( view , "Maximum Players Reached.");
+        final String playerName = view.getPlayerName();
+        if (!playerName.isBlank()) {
+            if (players.size() == MAX_PLAYERS) {
+               JOptionPane.showMessageDialog(view, "Maximum Players Reached.");
             } else if (players.contains(playerName)) {
-                JOptionPane . showMessageDialog ( view , "Player Name Already Existing.");
+                JOptionPane.showMessageDialog(view, "Player Name Already Existing.");
             } else {
                 players.add(playerName);
                 playerCount++;
@@ -41,23 +61,36 @@ public class MenuLogicImpl implements MenuLogic {
         }
     }
 
+    /**
+    * {@inheritDoc}
+    */
     @Override
     public void showInstructions() {
         view.showInstructions();
     }
 
+   /**
+    * {@inheritDoc}
+    */
+    @Override
+    public int getPlayersCount() {
+        return playerCount;
+    }
+
+    /**
+     * Updates the player list displayed on the view, showing the names of all players.
+     * This method generates a formatted string with the player names and updates the player label.
+     */
     private void updatePlayerList() {
-        StringBuilder playerListText = new StringBuilder("PLAYERS: ");
-        for(int i = 0; i<players.size(); i++) {
-            if(i!=0) {
-                playerListText.append("  ").append(i+1).append(") ");
-                playerListText.append(players.get(i));
-            } else {
-                playerListText.append("  ").append(i+1).append(")  ");
-                playerListText.append(players.get(i));
-            }
+        final StringBuilder playerListText = new StringBuilder("PLAYERS: ");
+        for (int i = 0; i < players.size(); i++) {
+            playerListText
+                .append(' ')
+                .append(i + 1)
+                .append(") ")
+                .append(players.get(i));
         }
-        playerListText.append(" ");
+        playerListText.append(' ');
         view.updatePlayerLabel(playerListText.toString());
     }
 }
